--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.1.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
